# RL-token-minimize

./: .gitignore  README.md  pyproject.toml
notebooks/: kaggle_pipeline.ipynb
scripts/: evaluate.py  prepare_data.py  train_rl.py  train_sft.py
src/rl_token_minimize/: __init__.py  episode.py  modeling.py  policy.py  reward.py  sft_data.py  tasks.py  tools.py  traces.py  verifier.py
tests/: test_episode.py  test_reward.py  test_sft_data.py  test_tools.py  test_traces.py  test_verifier.py
